// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BaseModel models all() Returns a list of models 1`] = `
Array [
  Checklist {
    "id": 3,
    "name": "QA Checklist Rest",
    "tasks": [Function],
  },
  Checklist {
    "id": 1,
    "name": "Onboarding Rest",
    "tasks": [Function],
  },
  Checklist {
    "id": 2,
    "name": "Project Audit Rest",
    "tasks": [Function],
  },
]
`;

exports[`BaseModel models belongsTo()  1`] = `
Checklist {
  "id": 1,
  "name": "Onboarding Rest",
  "tasks": [Function],
}
`;

exports[`BaseModel models find() returns a single model 1`] = `
Checklist {
  "id": 1,
  "name": "Onboarding Rest",
  "tasks": [Function],
}
`;

exports[`BaseModel models first() returns the first record in the store BY resource index 1`] = `
Object {
  "attributes": Object {
    "name": "QA Checklist Rest",
  },
  "id": 3,
  "links": Object {
    "self": "http://example.com/checklists/3",
  },
  "relationships": Object {
    "tasks": Object {
      "data": Array [
        Object {
          "id": 5,
          "type": "tasks",
        },
        Object {
          "id": 6,
          "type": "tasks",
        },
      ],
    },
  },
  "type": "checklists",
}
`;

exports[`BaseModel models hasMany() hasMany 1`] = `
Array [
  Task {
    "checklist": [Function],
    "description": "Onboarding REST 1",
    "id": 1,
    "user": [Function],
  },
  Task {
    "checklist": [Function],
    "description": "Onboarding REST 2",
    "id": 2,
    "user": [Function],
  },
]
`;

exports[`BaseModel models includes() belongsTo  1`] = `
Array [
  Task {
    "checklist": Checklist {
      "id": 1,
      "name": "Onboarding Rest",
    },
    "description": "Onboarding REST 1",
    "id": 1,
    "user": [Function],
  },
  Task {
    "checklist": Checklist {
      "id": 1,
      "name": "Onboarding Rest",
    },
    "description": "Onboarding REST 2",
    "id": 2,
    "user": [Function],
  },
  Task {
    "checklist": Checklist {
      "id": 2,
      "name": "Project Audit Rest",
    },
    "description": "Project Audit Rest 3",
    "id": 3,
    "user": [Function],
  },
  Task {
    "checklist": Checklist {
      "id": 2,
      "name": "Project Audit Rest",
    },
    "description": "Project Audit Rest 4",
    "id": 4,
    "user": [Function],
  },
  Task {
    "checklist": Checklist {
      "id": 3,
      "name": "QA Checklist Rest",
    },
    "description": "QA Checklist Rest 5",
    "id": 5,
    "user": [Function],
  },
  Task {
    "checklist": Checklist {
      "id": 3,
      "name": "QA Checklist Rest",
    },
    "description": "QA Checklist Rest 6",
    "id": 6,
    "user": [Function],
  },
]
`;

exports[`BaseModel models includes() hasMany  1`] = `
Array [
  Checklist {
    "id": 3,
    "name": "QA Checklist Rest",
    "tasks": Array [
      Task {
        "description": "QA Checklist Rest 5",
        "id": 5,
      },
      Task {
        "description": "QA Checklist Rest 6",
        "id": 6,
      },
    ],
  },
  Checklist {
    "id": 1,
    "name": "Onboarding Rest",
    "tasks": Array [
      Task {
        "description": "Onboarding REST 1",
        "id": 1,
      },
      Task {
        "description": "Onboarding REST 2",
        "id": 2,
      },
    ],
  },
  Checklist {
    "id": 2,
    "name": "Project Audit Rest",
    "tasks": Array [
      Task {
        "description": "Project Audit Rest 3",
        "id": 3,
      },
      Task {
        "description": "Project Audit Rest 4",
        "id": 4,
      },
    ],
  },
]
`;

exports[`BaseModel models last() returns the last record in the store BY resource index 1`] = `
Object {
  "attributes": Object {
    "name": "Project Audit Rest",
  },
  "id": 2,
  "links": Object {
    "self": "http://example.com/checklists/2",
  },
  "relationships": Object {
    "tasks": Object {
      "data": Array [
        Object {
          "id": 3,
          "type": "tasks",
        },
        Object {
          "id": 4,
          "type": "tasks",
        },
      ],
    },
  },
  "type": "checklists",
}
`;

exports[`BaseModel models where() filter by id 1`] = `
Checklist {
  "id": 3,
  "name": "QA Checklist Rest",
  "tasks": [Function],
}
`;

exports[`BaseModel models where() filters by name 1`] = `
Checklist {
  "id": 2,
  "name": "Project Audit Rest",
  "tasks": [Function],
}
`;

exports[`BaseModel objects all()  1`] = `
Array [
  Object {
    "id": 3,
    "name": "QA Checklist Rest",
  },
  Object {
    "id": 1,
    "name": "Onboarding Rest",
  },
  Object {
    "id": 2,
    "name": "Project Audit Rest",
  },
]
`;

exports[`BaseModel objects find()  1`] = `
Checklist {
  "id": 2,
  "name": "Project Audit Rest",
  "tasks": [Function],
}
`;

exports[`BaseModel objects includes()  1`] = `
Array [
  Object {
    "id": 3,
    "name": "QA Checklist Rest",
    "tasks": Array [
      Object {
        "description": "QA Checklist Rest 5",
        "id": 5,
      },
      Object {
        "description": "QA Checklist Rest 6",
        "id": 6,
      },
    ],
  },
  Object {
    "id": 1,
    "name": "Onboarding Rest",
    "tasks": Array [
      Object {
        "description": "Onboarding REST 1",
        "id": 1,
      },
      Object {
        "description": "Onboarding REST 2",
        "id": 2,
      },
    ],
  },
  Object {
    "id": 2,
    "name": "Project Audit Rest",
    "tasks": Array [
      Object {
        "description": "Project Audit Rest 3",
        "id": 3,
      },
      Object {
        "description": "Project Audit Rest 4",
        "id": 4,
      },
    ],
  },
]
`;

exports[`BaseModel objects where()  1`] = `
Object {
  "id": 2,
  "name": "Project Audit Rest",
}
`;
